update: fix contrasting colors in price and inputs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,9 @@ body {
 .offcanvas-overlay {
   background-color: rgba(0, 0, 0, 0.15);
 }
+
+input,
+textarea,
+select {
+  color: #000 !important;
+}
